fix vertical whitespace issue for map and lack of margin issue on mobile

--- a/index.css
+++ b/index.css
@@ -11,6 +11,12 @@ body {
     margin-block-end: 4rem;
 }
 
+@media screen and (max-width: 80ch) {
+    body {
+        margin: 0 1ch;
+    }
+}
+
 h1 {
     text-align: center;
 }
@@ -137,5 +143,6 @@ button {
 }
 
 #attribution {
+    margin-block-start: 2rem;
     text-align: center;
 }
